# TimerApp

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.user.7fd5723  README.md  ScreenshotManager.cpp  ScreenshotManager.h  TimerManager.cpp  TimerManager.h  appicon.rc  databasehelper.cpp  databasehelper.h  installer.nsi  main.cpp  qmldir.cpp  resources.qrc  screenshot.cpp  screenshot.h  scripthelper.cpp  scripthelper.h  tracker.cpp  tracker.h
.github/: linux_github_workflow.yml
.github/workflows/: linux_build.yml  linux_build_work_fully.yml  linux_workflow.yml  macos-build.yml  macos_build.yml  windows_workflow.yml  windows_workflow_fully.yml
QML/: Main.qml  script.js
QML/components/: Analytics.qml  BarChartPanel.qml  PieChartPanel.qml  ScreenShot.qml  TimeLogPanel.qml  TimerPanel.qml  TopStatsPanel.qml
QML/pages/: Analytics.qml  AzureLogin.qml  GoogleLogin.qml  LoginPage.qml  Theme.qml  Time.qml  TimeLog.qml
installer/: installer.nsi
msi/: Overwatch.wxs
singleapplication/: CMakeLists.txt
